src/test/ui/proc-macro/mixed-site-span.stderr
error[E0426]: use of undeclared label `'label_use`
  --> $DIR/mixed-site-span.rs:15:9
   |
LL |         proc_macro_rules!();
   |         ^^^^^^^^^^^^^^^^^^^^ undeclared label `'label_use`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `local_use` in this scope
  --> $DIR/mixed-site-span.rs:15:9
   |
LL |         proc_macro_rules!();
   |         ^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `local_def` in this scope
  --> $DIR/mixed-site-span.rs:19:9
   |
LL |         local_def;
   |         ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `ItemUse` in crate `$crate`
  --> $DIR/mixed-site-span.rs:26:1
   |
LL | pass_dollar_crate!();
   | ^^^^^^^^^^^^^^^^^^^^^ not found in `$crate`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: possible candidate is found in another module, you can import it into scope
   |
LL | use ItemUse;
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0425, E0426.
For more information about an error, try `rustc --explain E0412`.
